Added impression extractor

--- a/ris/gastro/config.ini
+++ b/ris/gastro/config.ini
@@ -1,6 +1,7 @@
 [DEFAULT]
 data = /home/giga/dev/python/shipyard/ris/gastro/data/sentence_dataset.csv
+impression_extractor = /home/giga/dev/python/shipyard/ris/gastro/output/impression_extractor.dill
 sentence_tokenizer = /home/giga/dev/python/shipyard/ris/gastro/output/sentence_tokenizer.dill
 preprocessor = /home/giga/dev/python/shipyard/ris/gastro/output/preprocess.dill
-vectorizer = /home/giga/dev/python/shipyard/ris/gastro/output/tfidf.pickle
+vectorizer = /home/giga/dev/python/shipyard/ris/gastro/output/vectorizer.pickle
 model = /home/giga/dev/python/shipyard/ris/gastro/output/model.pickle
